# volcano-data-deconvolution

./: .gitignore  .mise.toml  .nvim.lua  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  DOC.md  README.md  dprint.jsonc  justfile  pyproject.toml  pyproject.toml.rye-bak  volcano-base.toml
.github/release-please/: release-please-config.json
.github/workflows/: release.yml  tests.yml
src/: vdd.pyi
src/vdd/: __init__.py  __main__.py  compare.py  compare.pyi  deconvolve_cesm_output.py  deconvolve_methods.py  deconvolve_methods.pyi  deconvolve_ob16.py  deconvolve_ob16.pyi  extra.mplstyle  get_cesm_data.py  how_close_are_ob16_eruptions.py  how_close_are_ob16_eruptions.pyi  jgr.mplstyle  load.py  load.pyi  ob16_parameters.py  ob16_parameters.pyi  reff.py  reff.pyi  utils.py  utils.pyi
src/vdd/deprecated/: __init__.py  daily_does_not_work.py  daily_does_not_work.pyi  eurasian_warming.py
src/vdd/plotting/: __init__.py  check_double_waveform.py  check_double_waveform.pyi  correlation_testing.py  correlation_testing.pyi  cut_off.py  cut_off.pyi  daily_does_not_work.py  deconv_ob16_cesm2.py  deconv_ob16_cesm2.pyi  double_eruption_reff_oh_so2.py  double_eruption_reff_oh_so2.pyi  eurasian_warming.py  gupta_recreate.py  lia.py  ob16_remove_enso.py  ob16_remove_enso.pyi  ob16_versus_recreated_from_cesm2.py  ob16_versus_recreated_from_cesm2.pyi  ob16_waiting_times_and_size.py  ob16_waiting_times_and_size.pyi  parametrisation.py  parametrisation.pyi  presentation.py  presentation.pyi  reconstruction.py  reconstruction.pyi  relationships.py  review1.py  review1.pyi  sea_ice.py  sea_ice.pyi  shape_of_response_functions.py  simulations_overview.py  simulations_overview.pyi
tests/: __init__.py  test_json.py  test_zenodo.py  zenodo_v1.schema.json
